ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy-ingress
  namespace: demo
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: envoy-proxy  # Connect to Envoy, not api-server!
            port:
              number: 80
